--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,7 +37,7 @@
         app:srcCompat="@drawable/capture" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/idSave"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="44dp"
@@ -48,7 +48,7 @@
         app:srcCompat="@drawable/capture2" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/idBtnPermit"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="100dp"
@@ -64,8 +64,8 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/idSave"
+        app:layout_constraintTop_toBottomOf="@+id/idSave"
         app:srcCompat="@drawable/capture4" />
 
     <TextView
@@ -85,10 +85,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Save"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/idSave"
         app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintStart_toStartOf="@+id/idSave"
+        app:layout_constraintTop_toBottomOf="@+id/idSave" />
 
     <TextView
         android:id="@+id/textView4"
@@ -96,10 +96,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Permissions"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintEnd_toEndOf="@+id/idBtnPermit"
         app:layout_constraintHorizontal_bias="0.483"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintStart_toStartOf="@+id/idBtnPermit"
+        app:layout_constraintTop_toBottomOf="@+id/idBtnPermit" />
 
     <TextView
         android:id="@+id/textView5"
