--- a/app/src/main/res/layout/activity_permit.xml
+++ b/app/src/main/res/layout/activity_permit.xml
@@ -58,10 +58,12 @@
         app:layout_constraintTop_toBottomOf="@+id/idLatitude" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="330dp"
-        android:layout_height="499dp"
+        android:id="@+id/idListContact"
+        android:layout_width="317dp"
+        android:layout_height="470dp"
         android:layout_marginTop="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/photoUser"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.181" />
 </androidx.constraintlayout.widget.ConstraintLayout>
