--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,7 @@
         android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/idButtonLog"
+        app:layout_constraintStart_toEndOf="@+id/idButtonCycle"
         app:layout_constraintTop_toBottomOf="@+id/bonjour"
         app:srcCompat="@drawable/capture2" />
 
