--- a/app/src/main/res/layout/activity_permit.xml
+++ b/app/src/main/res/layout/activity_permit.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/photoUser"
-        android:layout_width="100dp"
-        android:layout_height="90dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="28dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
@@ -63,7 +63,9 @@
         android:layout_height="470dp"
         android:layout_marginTop="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.287"
         app:layout_constraintStart_toStartOf="@+id/photoUser"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
-        app:layout_constraintVertical_bias="0.181" />
+        app:layout_constraintVertical_bias="0.177" />
 </androidx.constraintlayout.widget.ConstraintLayout>
