--- a/app/src/main/res/layout/fragment_cycle_fragment1.xml
+++ b/app/src/main/res/layout/fragment_cycle_fragment1.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".CycleFragment1">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment contact_list_items -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
