--- a/app/src/main/res/layout/activity_web_services.xml
+++ b/app/src/main/res/layout/activity_web_services.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/adressWebServices"
+        android:id="@+id/addressWebServices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -48,5 +48,14 @@
         android:layout_marginTop="20dp"
         android:text="mail"
         app:layout_constraintStart_toEndOf="@+id/imageWebServices"
-        app:layout_constraintTop_toBottomOf="@+id/adressWebServices" />
+        app:layout_constraintTop_toBottomOf="@+id/addressWebServices" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listWeb"
+        android:layout_width="325dp"
+        android:layout_height="522dp"
+        android:layout_marginTop="180dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
